# dpm_agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  agents.yaml  pyproject.toml
docs/: architecture.md
memory/: preferences.md  profile.md  project_state.md
openspec/changes/add-user-isolation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-15-configurable-agent-definitions/: design.md  proposal.md  tasks.md
openspec/specs/agent-definitions/: spec.md
src/agents/: agent_factory.py  api.py  bootstrap.py  cli.py  config.py  db.py  logging.py  models.py  repository.py  runtime_encoding.py  service.py
src/agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agents/application/: bootstrap.py
src/agents/core/: agent.py  definitions.py  events.py  service.py  tools.py
src/agents/domain/: models.py
src/agents/interfaces/: __init__.py
src/agents/interfaces/api/: __init__.py  __main__.py  app.py  schemas.py  server.py  sse.py
src/agents/storage/: __init__.py  db.py  repository.py
src/agents/tools/: __init__.py  calculator.py
src/dpm_agent/: __init__.py  agent_factory.py  api.py  bootstrap.py  cli.py  config.py  db.py  models.py  repository.py  sanitize.py  service.py
src/dpm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dpm_agent/application/: __init__.py  bootstrap.py
src/dpm_agent/core/: __init__.py  agent.py  events.py  service.py
src/dpm_agent/domain/: __init__.py
src/dpm_agent/storage/: __init__.py  db.py  repository.py
src/dpm_agent/tools/: __init__.py  calculator.py
(+16 files in other folders)
