[project]
name = "agents"
version = "0.1.0"
description = "Personal DeepAgents application with skills, memory, and pluggable persistence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.4.5",
  "httpx[socks]>=0.28.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
postgres = [
  "psycopg[binary]>=3.2.0",
]

[project.scripts]
agents = "agents.cli:main"
agents-api = "agents.api:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
